--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "js-tokens": "^4.0.0",
     "json-parse-even-better-errors": "^2.3.1",
     "kind-of": "^6.0.3",
+    "lightgallery": "^2.7.1",
     "lines-and-columns": "^1.2.4",
     "locate-path": "^5.0.0",
     "lodash": "^4.17.21",
